--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Portfolio Website</h1>
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Ipsum vel dignissimos tempora accusamus suscipit perspiciatis corporis quibusdam distinctio, tempore, obcaecati voluptatum, tenetur ullam! Placeat, 
-        porro corrupti molestiae eum excepturi exercitationem?</h3>
+        porro corrupti molestiae eum excepturi exercitationem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nihil earum a tenetur blanditiis, mollitia voluptate doloribus error aspernatur molestias neque, repellendus maiores aperiam dicta quisquam architecto laboriosam, molestiae et!</h3>
 </body>
 </html>
